schema search now allows you to build up a query

--- a/server/help.html
+++ b/server/help.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="static/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="static/js/materialize.min.js"></script>
     <main>
     <div class="container">
