--- a/server/explore.html
+++ b/server/explore.html
@@ -61,6 +61,7 @@ SELECT ?vav WHERE {
       </div>
     </div>
     </main>
+    <script type="text/javascript" src="static/js/commonqueries.js"></script>
     <script src="static/js/explore.js"></script>
   </body>
 </html>
