--- a/server/search.html
+++ b/server/search.html
@@ -102,7 +102,7 @@
         });
 
         var render_node = function(node) {
-            var nodeQuery = "SELECT ?pred ?obj ?class WHERE {?obj rdf:type ?class . <" + node + "> ?pred ?obj . };";
+            var nodeQuery = "SELECT ?pred ?obj ?class WHERE {?obj rdf:type ?class . <" + node + "> ?pred ?obj };";
             var html = "<div class='row'><div class='col s12 m12'><div class='card darken-1'>";
             $.post("/api/query", nodeQuery, function(data) {
                 console.log(data);
@@ -203,7 +203,7 @@
             url.searchParams.set("class", klass)
             history.pushState(null,null,url);
             $('ul.tabs').tabs('select_tab', 'tab_instances');
-            var instanceQuery = "SELECT ?inst ?class WHERE { ?inst rdf:type/rdfs:subClassOf* " + klass + " . ?inst rdf:type ?class . };";
+            var instanceQuery = "SELECT ?inst ?class WHERE { ?inst rdf:type/rdfs:subClassOf* " + klass + " . ?inst rdf:type ?class };";
             var html = "<thead><tr><th>Instance</th><th>Class</th></tr></thead><tbody>";
             $.post("/api/query", instanceQuery, function(data) {
                 console.log(data);
