--- a/server/query.html
+++ b/server/query.html
@@ -60,8 +60,8 @@
           <form id="queryform" form="queryform" class="col s12">
             <textarea id="queryarea" name="queryarea">
 SELECT ?vav WHERE {
-    ?vav rdf:type brick:VAV .
-} LIMIT 500;</textarea>
+    ?vav rdf:type brick:VAV
+};</textarea>
           </form>
         </div>
         <div class="row">
