--- a/server/plan.html
+++ b/server/plan.html
@@ -44,7 +44,7 @@
           <form id="queryform" form="queryform" class="col s12">
             <textarea id="queryarea" name="queryarea">
 SELECT ?vav WHERE {
-    ?vav rdf:type brick:VAV .
+    ?vav rdf:type brick:VAV
 };</textarea>
           </form>
         </div>
