--- a/server/search.html
+++ b/server/search.html
@@ -17,6 +17,7 @@
         <li class="active"><a class="tooltipped" data-position="right" data-delay="100" data-tooltip="Visualize the construction of BRICK queries" href="/search">Search<i class="material-icons">keyboard_arrow_right</i></a></li>
         <li><a class="tooltipped" data-position="right" data-delay="100" data-tooltip="Documentation and other resources" href="/help">Help<i class="material-icons">keyboard_arrow_right</i></a></li>
         <li><div class="divider"></div></li>
+        <li style="position: absolute; bottom: 100px; left: 30px;" class="collection-item bottom-align">v0.5.1</li>
     </ul>
     <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
   </head>
