--- a/server/demo.html
+++ b/server/demo.html
@@ -9,44 +9,30 @@
     <script src="static/mode/python/python.js"></script>
     <script type="text/javascript" src="static/js/vis.min.js"></script>
     <link href="static/css/vis-network.min.css" rel="stylesheet" type="text/css" />
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link type="text/css" rel="stylesheet" href="static/css/site.css" />
+    <link type="text/css" rel="stylesheet" href="static/css/demo.css" />
+
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
+    <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   	<title>HodDB Query</title>
   </head>
   <body>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="static/js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="static/js/materialize.min.js"></script>
     <script src="static/js/dotgraph/js/dotparser.js"></script>
     <script src="static/js/dotgraph/js/dotgraph.js"></script>
     <script src="https://d3js.org/d3.v2.min.js?2.9.3"></script>
-    <main>
-    <!--<div class="container">-->
-    <div>
-      <h5 class="col s12 center-align">Query Planner</h3>
-      <!--<div class="row">
-        <div class="col s12">
-          <form id="queryform" form="queryform" class="col s12">
-            <textarea id="queryarea" name="queryarea" style="height: 100px">
-SELECT ?tstat WHERE {
-    ?tstat rdf:type brick:Thermostat
-};</textarea>
-          </form>
-        </div>
-      </div>-->
-        <div id="errortext" class="col s12 card-panel red lighten-2" hidden>
-          <p></p>
-        </div>
-        <div class="col s12">
-          <div id="mynetwork"></div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="text/javascript" src="static/js/demo.js"></script>
+
+    <div id="app"></div>
+        <div id="errortext" hidden>
+            <p></p>
         </div>
     </div>
-    </main>
-    <script type="text/javascript" src="static/js/commonqueries.js"></script>
-    <script type="text/javascript" src="static/js/demo.js"></script>
+    <script src="static/js/vue.js"></script>
+    <script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
+    <script src="static/js/app.js"></script>
   </body>
 </html>
